--- a/CSS/SplashStyle.css
+++ b/CSS/SplashStyle.css
@@ -1,8 +1,8 @@
 html { background-color: #000;}
 
 body{
-    min-height: 100vh;
-    max-width: 412px;
+    min-height:892px;
+    max-width: 393px;
     background-color: #FFC91B;
     margin: 0 auto;
     font-display: flex;
