--- a/Configstyle.css
+++ b/Configstyle.css
@@ -2,7 +2,9 @@ body {
     font-family: "Inter-Regular", sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #fffefe;
+    padding-left: 15px; 
+    padding-right: 15px; 
 }
 
 .container {
@@ -62,14 +64,16 @@ body {
 }
 
 .logout {
-    text-align: center;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
     margin-top: 20px;
 }
 
 .logout button {
-    display: flex;
-    width: 350px;
-    padding: 18px 131px;
+    width: 100%; 
+    max-width: 350px; 
+    padding: 18px 0; 
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -83,6 +87,7 @@ body {
 .logout button:hover {
     background-color: #ff1a1a;
 }
+
 
 .footer {
     display: flex;
