--- a/Configstyle.css
+++ b/Configstyle.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
+    padding-left: 15px; 
+    padding-right: 15px;
 }
 
 .container {
@@ -62,14 +64,16 @@ body {
 }
 
 .logout {
-    text-align: center;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
     margin-top: 20px;
 }
 
 .logout button {
-    display: flex;
-    width: 350px;
-    padding: 18px 131px;
+    width: 100%; 
+    max-width: 350px; 
+    padding: 18px 0;
     justify-content: center;
     align-items: center;
     gap: 10px;
