--- a/Homestyle.css
+++ b/Homestyle.css
@@ -624,7 +624,7 @@
 .nav-bar {
      list-style: none;
     display: flex;
-    justify-content: space-between; /* Distribuye los elementos de forma equitativa */
+    justify-content: space-between; 
     padding: 0;
 }
 @media (max-width: 600px) {
